<resources>

    <!-- name of our application -->
    <string name="app_name" translatable="false">Chess</string>

    <!-- keys for shared preferences -->
    <string name="difficulty_file_key" translatable="false">com.gamesbykevin.chess.DIFFICULTY_FILE_KEY</string>
    <string name="google_play_auto_login_file_key" translatable="false">com.gamesbykevin.chess.GOOGLE_PLAY_AUTO_LOGIN_FILE_KEY</string>

    <string name="saved_match_1_file_key" translatable="false">com.gamesbykevin.chess.SAVED_MATCH_1_FILE_KEY</string>
    <string name="saved_match_1_desc_key" translatable="false">com.gamesbykevin.chess.SAVED_MATCH_1_DESC_KEY</string>
    <string name="saved_match_2_file_key" translatable="false">com.gamesbykevin.chess.SAVED_MATCH_2_FILE_KEY</string>
    <string name="saved_match_2_desc_key" translatable="false">com.gamesbykevin.chess.SAVED_MATCH_2_DESC_KEY</string>
    <string name="saved_match_3_file_key" translatable="false">com.gamesbykevin.chess.SAVED_MATCH_3_FILE_KEY</string>
    <string name="saved_match_3_desc_key" translatable="false">com.gamesbykevin.chess.SAVED_MATCH_3_DESC_KEY</string>
    <string name="saved_match_4_file_key" translatable="false">com.gamesbykevin.chess.SAVED_MATCH_4_FILE_KEY</string>
    <string name="saved_match_4_desc_key" translatable="false">com.gamesbykevin.chess.SAVED_MATCH_4_DESC_KEY</string>
    <string name="saved_match_5_file_key" translatable="false">com.gamesbykevin.chess.SAVED_MATCH_5_FILE_KEY</string>
    <string name="saved_match_5_desc_key" translatable="false">com.gamesbykevin.chess.SAVED_MATCH_5_DESC_KEY</string>

    <!-- button text -->
    <string name="button_text_next">Continue</string>
    <string name="button_text_rate">Rate</string>
    <string name="button_text_more">More</string>
    <string name="button_text_menu">Menu</string>
    <string name="button_text_start">Start</string>
    <string name="button_text_options">Options</string>
    <string name="button_text_tutorial">Tutorial</string>
    <string name="button_text_play">Play</string>
    <string name="button_text_leaderboard">Leaderboard</string>
    <string name="button_text_achievements">Achievements</string>

    <!-- game status -->
    <string name="game_status_player_1_check">Player 1 is in check</string>
    <string name="game_status_player_2_check">Player 2 is in check</string>
    <string name="game_status_player_1_checkmate">Player 1 Checkmate</string>
    <string name="game_status_player_2_checkmate">Player 2 Checkmate</string>
    <string name="game_status_player_1_time">Player 1 Time Expired</string>
    <string name="game_status_player_2_time">Player 2 Time Expired</string>

    <string name="game_status_stalemate">Stalemate</string>

    <!-- prompt to exit -->
    <string name="exit_prompt">Press again to exit</string>

    <!-- text on options page -->
    <string name="text_in_game_options">Game Options</string>
    <string name="vibrate_on">Vibrate: On</string>
    <string name="vibrate_off">Vibrate: Off</string>
    <string name="sound_on">Sound: On</string>
    <string name="sound_off">Sound: Off</string>
    <string name="google_play_auto_enabled">Google Login: On</string>
    <string name="google_play_auto_disabled">Google Login: Off</string>

    <string-array name="difficulty_arrays">
        <item>SKILL: EASY</item>
        <item>SKILL: MEDIUM</item>
        <item>SKILL: HARD</item>
    </string-array>

    <!-- text on prompt save/load replay -->
    <string name="confirm_save">Yes</string>
    <string name="confirm_exit">No</string>
    <string name="overwrite_save">Overwrite Existing Save</string>
    <string name="watch_replay">Watch Replay</string>
    <string name="select_save">Select image to save</string>
    <string name="replay_not_available">No replay saved here</string>
    <string name="save_replay">Save replay of this game?</string>

    <!-- text displayed -->
    <string name="game_over_text">Game Over</string>

    <!-- different game modes -->
    <string name="game_mode_single_player">Human vs Computer</string>
    <string name="game_mode_single_player_timed">Human vs Computer (Speed 5 minutes)</string>
    <string name="game_mode_two_player_offline">Human vs Human (Offline)</string>
    <string name="game_mode_two_player_online">Human vs Human (Online)</string>
    <string name="game_mode_two_player_online_timed">Human vs Human (Online, Speed 5 minutes)</string>
    <string name="game_mode_replay">Watch Game Replay</string>

    <!-- ui messages for google play services -->
    <string name="sign_in_other_error">There was an issue with sign-in, please try again later.</string>
    <string name="sign_in_failed">Failed to sign in. Please check your network connection and try again.</string>
    <string name="app_misconfigured">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
    <string name="license_failed">License check failed.</string>
    <string name="unknown_error">Unknown error.</string>
    <string name="UNKNOWN_ERROR">Unknown error.</string>
    <string name="gamehelper_sign_in_failed">Failed to sign in. Please check your network connection and try again.</string>
    <string name="gamehelper_app_misconfigured">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
    <string name="gamehelper_license_failed">License check failed.</string>
    <string name="gamehelper_unknown_error">Unknown error.</string>


    <string name="hello_world">Hello world!</string>
    <string name="match_instructions">Type in a new word for the data in this game, then hit done.</string>
    <string name="quick_match">Quick match</string>
    <string name="done">Done</string>
    <string name="leave">Leave</string>
    <string name="cancel">Cancel</string>
    <string name="finish">Finish</string>
    <string name="welcome_to_our_skeleton_app_">Welcome to our skeleton app!</string>
    <string name="check_games">Check games</string>
    <string name="start_match">Start Match</string>
    <string name="turn_counter">Turn counter</string>
    <string name="error_get_inbox_intent">There was a problem getting the inbox intent!</string>
    <string name="error_get_select_opponents">There was a problem getting the select opponents intent!</string>
    <string name="turn_label">Turn %1$d</string>


    <string name="game_title">Button Clicker 2000!</string>
    <string name="game_blurb">A sample game that tests your ability to click a button. Can you click faster than your friends? Only one way to find out! To play this game with friends, you must sign in with Google.</string>
    <string name="single_player">Single Player</string>
    <string name="single_player_explanation">Get some practice!</string>
    <string name="quick_game">Quick game</string>
    <string name="invite_players">Invite friends</string>
    <string name="see_invitations">See invitations</string>
    <string name="quick_game_explanation">Challenge a random opponent.</string>
    <string name="invite_players_explanation">Invite friends to play a game.</string>
    <string name="see_invitations_explanation">See who is inviting you right now.</string>
    <string name="inv_popup_text">Incoming invitation!</string>
    <string name="accept_popup_invite">Accept!</string>
    <string name="sign_out">Sign Out</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="instructions">Click the button as fast as you can!</string>
    <string name="game_problem">An error occurred while starting the game. Please try again.</string>
    <string name="click_me">Click me!</string>
    <string name="is_inviting_you">is challenging you to a game!</string>
    <string name="signin_other_error">There was an issue with sign in. Please try again later.</string>
    <string name="status_exception_error">%1$s (status %2$d). %3$s.</string>

    <string name="status_multiplayer_error_not_trusted_tester">Anyone you invite must be a trusted tester</string>
    <string name="match_error_already_rematched">This rematch has already been started!</string>
    <string name="client_reconnect_required">Games client reconnect required</string>
    <string name="network_error_operation_failed">Network error: Operation failed</string>
    <string name="internal_error">Internal error</string>
    <string name="unexpected_status">Unexpected status: %1$s</string>
    <string name="match_error_inactive_match">This match is inactive.</string>
    <string name='match_error_locally_modified'>This match has locally-modified data.  This operation cannot be performed until the match is sent to the server.</string>
    <string name="score_label">%1$s - Me</string>

</resources>