<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gamesbykevin.chess.activity.MultiplayerActivity"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- MAIN SCREEN -->
    <LinearLayout android:id="@+id/screen_main" style="@style/LLScreen">
        <Button android:id="@+id/button_quick_game"
                style="@style/MainScreenButton"
                android:text="@string/quick_game"
                android:onClick="onClickQuickMatch" />
        <TextView style="@style/MainScreenButtonBlurb"
                  android:text="@string/quick_game_explanation" />
        <Button android:id="@+id/button_invite_players"
                style="@style/MainScreenButton"
                android:text="@string/invite_players"
                android:onClick="onClickInvite" />
        <TextView style="@style/MainScreenButtonBlurb"
                  android:text="@string/invite_players_explanation" />
        <Button android:id="@+id/button_see_invitations"
                style="@style/MainScreenButton"
                android:text="@string/see_invitations"
                android:onClick="onClickViewInvitations" />
        <TextView style="@style/MainScreenButtonBlurb"
                  android:text="@string/see_invitations_explanation" />
    </LinearLayout>

    <!-- INVITATION POPUP -->
    <LinearLayout android:id="@+id/invitation_popup" style="@style/InvPopup">
        <TextView android:id="@+id/incoming_invitation_text" style="@style/InvPopupText" />
        <Button android:id="@+id/button_accept_popup_invitation"
                style="@style/InvPopupButton"
                android:text="@string/accept_popup_invite"
                android:onClick="onClickAcceptInvitation" />
    </LinearLayout>

    <!-- "PLEASE WAIT" SCREEN -->
    <LinearLayout android:id="@+id/screen_wait" style="@style/LLScreen">
        <TextView style="@style/Blurb" android:text="@string/please_wait" />
    </LinearLayout>

</LinearLayout>
